SONARIAC-1443 Implement ruling tests for `spring-config` extension (#1284)